--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         }
 
         .hamburger {
-            display: block;
+            display: none;
             cursor: pointer;
             font-size: 2rem;
             user-select: none;
             transition: transform 0.3s ease;
-            z-index: 1700; /* Higher z-index to ensure visibility */
+            z-index: 1700;
             position: relative;
         }
 
@@ -98,6 +98,45 @@
         }
 
         .nav-links {
+            display: flex;
+        }
+
+        .nav-links li {
+            display: inline;
+            margin: 0 10px;
+        }
+
+        .nav-links a {
+            color: black;
+            text-decoration: none;
+            position: relative;
+            padding: 1rem;
+            font-weight: bold;
+            transition: color 0.3s ease, transform 0.3s ease;
+        }
+
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            width: 0;
+            height: 2px;
+            background-color: #007bff;
+            transition: width 0.3s ease, left 0.3s ease;
+        }
+
+        .nav-links a:hover::after {
+            width: 100%;
+            left: 0;
+        }
+
+        .nav-links a:hover {
+            color: #007bff;
+            transform: scale(1.1);
+        }
+
+        .mobile-nav-links {
             display: none;
             z-index: 2000;
             position: fixed;
@@ -109,13 +148,13 @@
             overflow-y: auto;
         }
 
-        .nav-links.show {
+        .mobile-nav-links.show {
             display: flex;
             flex-direction: column;
             padding: 2rem;
         }
 
-        .nav-links li {
+        .mobile-nav-links li {
             display: block;
             margin: 30px 0;
             border-bottom: 1px solid #ffffff;
@@ -123,7 +162,7 @@
             width: 100%;
         }
 
-        .nav-links a {
+        .mobile-nav-links a {
             font-size: 14.5px;
             padding: 1rem;
             text-align: center;
@@ -136,7 +175,7 @@
             font-weight: bold;
         }
 
-        .nav-links a:hover {
+        .mobile-nav-links a:hover {
             color: #1f6396;
             transform: scale(1.05);
         }
@@ -537,7 +576,15 @@
 
         @media (max-width: 768px) {
             .nav-links {
-                padding: 1rem;
+                display: none;
+            }
+
+            .hamburger {
+                display: block;
+            }
+
+            .mobile-nav-links {
+                display: none;
             }
 
             .sample {
@@ -603,7 +650,15 @@
             <div class="hamburger" id="hamburger">
                 &#9776;
             </div>
-            <ul class="nav-links" id="nav-links">
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About us.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Sample.html">Samples</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="order.html">Order</a></li>
+            </ul>
+            <ul class="mobile-nav-links" id="mobile-nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About us.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -749,7 +804,7 @@
         // Select elements needed for the hamburger menu functionality
         const hamburger = document.getElementById('hamburger');
         const closeMenuButton = document.getElementById('close-menu');
-        const navLinks = document.getElementById('nav-links');
+        const mobileNavLinks = document.getElementById('mobile-nav-links');
 
         // Function to toggle the menu open/close
         function toggleMenu(event) {
@@ -757,15 +812,7 @@
             event.stopPropagation();
 
             hamburger.classList.toggle('open');
-            navLinks.classList.toggle('show');
-            navLinks.style.position = 'fixed';
-            navLinks.style.top = '0';
-            navLinks.style.right = '0';
-            navLinks.style.bottom = '0';
-            navLinks.style.left = '0';
-            navLinks.style.zIndex = "2000";
-            hamburger.style.zIndex = "2001";
-            console.log('Menu toggled');
+            mobileNavLinks.classList.toggle('show');
         }
 
         // Function to close the menu
@@ -774,8 +821,7 @@
             event.stopPropagation();
 
             hamburger.classList.remove('open');
-            navLinks.classList.remove('show');
-            console.log('Menu closed');
+            mobileNavLinks.classList.remove('show');
         }
 
         // Add event listeners for both click and touch events for better compatibility
@@ -787,8 +833,8 @@
 
         // Close menu if clicking outside the menu area
         document.addEventListener('click', function (event) {
-            if (!navLinks.contains(event.target) && !hamburger.contains(event.target)) {
-                if (navLinks.classList.contains('show')) {
+            if (!mobileNavLinks.contains(event.target) && !hamburger.contains(event.target)) {
+                if (mobileNavLinks.classList.contains('show')) {
                     closeMenu(event);
                 }
             }
