--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
          .samples {
             padding: 3rem 1rem;
             text-align: center;
-            background-color: rgba(28, 28, 28, 0.9);
-            border-radius: 10px;
+            background-color: rgba(30, 30, 70, 0.9)
+            border-radius: 5px;
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
         }
 
