--- a/index.html
+++ b/index.html
@@ -943,34 +943,35 @@
         };
 
 
-          // Function to check if an element is in view
-        function isElementInViewport(el) {
-            const rect = el.getBoundingClientRect();
-            return (
-                rect.top >= 0 &&
-                rect.left >= 0 &&
-                rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-                rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-            );
-        }
-
         // Function to animate samples
-        function animateSamples() {
-            const samples = document.querySelectorAll('.sample');
-            samples.forEach((sample, index) => {
-                if (isElementInViewport(sample)) {
-                    sample.classList.add('show');
-                    sample.style.transitionDelay = `${index * 0.1}s`; // Stagger the animation
-                } else {
-                    sample.classList.remove('show'); // Reset if not in view
-                }
-            });
-        }
+function animateSamples(entries, observer) {
+    entries.forEach(entry => {
+        if (entry.isIntersecting) {
+            const sample = entry.target;
+            sample.classList.add('show');
+            // Optional: Add a staggered effect based on index
+            const index = [...sample.parentElement.children].indexOf(sample);
+            sample.style.transitionDelay = `${index * 0.1}s`; // Stagger the animation
 
-        // Trigger the animation on scroll and on load
-        window.addEventListener('scroll', animateSamples);
-        window.addEventListener('load', animateSamples);
-        window.addEventListener('resize', animateSamples); // Optional: Check on resize
+            // Unobserve the element after it has animated
+            observer.unobserve(sample);
+        } else {
+            // Reset the animation when it goes out of view
+            sample.classList.remove('show');
+        }
+    });
+}
+
+// Create an intersection observer
+const observer = new IntersectionObserver(animateSamples, {
+    threshold: 0.1 // Adjust this value to trigger when 10% of the element is visible
+});
+
+// Select all samples to observe
+const samples = document.querySelectorAll('.sample');
+samples.forEach(sample => {
+    observer.observe(sample);
+});
         
     </script>
 </body>
