--- a/index.html
+++ b/index.html
@@ -729,12 +729,12 @@
             <div class="sample slide-in-left">
                 <h3>Accounting Principles for Sustainability and Decision Making</h3>
                 <p>This report explores the evolving role of accounting in decision-making and sustainability within organizations, particularly in the context of De Byrne Consulting's UK SME unit. It addresses compliance, financial statement preparation, financial analysis, and budgeting solutions.</p>
-                <a href="path/to/sample1.pdf" download class="download-link">Download Paper</a>
+                <a href="Sample/Medical sample 1.docx" download class="download-link">Download Paper</a>
             </div>
             <div class="sample slide-in-right">
                 <h3>Public Health Principles and Practice for Nursing Associates</h3>
                 <p>This discussion focuses on sexually transmitted infections (STIs) in Luton, emphasizing government initiatives and the role of healthcare professionals, particularly nurses, in advocating for and managing STI health services.</p>
-                <a href="path/to/sample2.pdf" download class="download-link">Download Paper</a>
+                <a href="Sample/Accounting Principles for Sustainability and Decision Making.docx" download class="download-link">Download Paper</a>
             </div>
         </div>
 
