--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
          .samples {
             padding: 3rem 1rem;
             text-align: center;
-            background-color: rgba(105, 105, 105, 0.9);
+            background: url('images/backs.jpg') no-repeat center center/cover;
             border-radius: 5px;
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
         }
@@ -411,7 +411,7 @@
         }
 
         .sample {
-            background-color: rgba(255, 255, 255, 0.1);
+            background-color: rgba(255, 255, 255, 0.6);
             margin: 1rem;
             padding: 2rem;
             border-radius: 10px;
@@ -461,14 +461,14 @@
         .sample h3 {
             font-size: 1.5rem;
             margin: 1rem 0 0.5rem;
-            color: #fff;
+            color: black;
             font-weight: 400;
             letter-spacing: 0.5px;
         }
 
         .sample p {
             font-size: 1rem;
-            color: #ddd;
+            color: black;
             margin: 0.5rem 0 1.5rem;
             line-height: 1.6;
             letter-spacing: 0.5px;
