--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
         }
 
         .testimonials {
+             background: url('images/backs.jpg') no-repeat center center/cover;
             padding: 3rem 1rem;
             background-color: white;
             text-align: center;
@@ -354,6 +355,7 @@
         }
 
         .faq {
+             background: url('images/backs.jpg') no-repeat center center/cover;
             padding: 3rem 1rem;
             background-color: #f0f0f0;
             text-align: center;
@@ -497,6 +499,7 @@
    
 
         .pricing {
+             background: url('images/backs.jpg') no-repeat center center/cover;
             padding: 3rem 1rem;
             background-color: #e0e0e0;
             text-align: center;
