--- a/index.html
+++ b/index.html
@@ -1038,41 +1038,44 @@
 
 
         <!-- Footer Section -->
-<footer style="background-color: #0056b3; color: #ffffff; padding: 2rem;">
-    <div style="display: flex; justify-content: space-between; align-items: center; max-width: 1200px; margin: auto;">
-        <!-- Quick Links Section -->
-        <div class="footer-quick-links">
-            <h3>Quick Links</h3>
-            <ul style="list-style: none; padding: 0; line-height: 1.8;">
-                <li><a href="index.html" style="color: #ffffff; text-decoration: none;">Home</a></li>
-                <li><a href="About us.html" style="color: #ffffff; text-decoration: none;">About Us</a></li>
-                <li><a href="services.html" style="color: #ffffff; text-decoration: none;">Services</a></li>
-                <li><a href="Sample.html" style="color: #ffffff; text-decoration: none;">Samples</a></li>
-                <li><a href="pricing.html" style="color: #ffffff; text-decoration: none;">Pricing</a></li>
-                <li><a href="order.html" style="color: #ffffff; text-decoration: none;">Order</a></li>
-            </ul>
-        </div>
 
-        <!-- Logo Section -->
-        <div class="footer-logo">
-            <img src="images/logo (2).png" alt="Company Logo" style="height: 200px; width: auto;">
+<!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="images/logo (2).png" alt=" Logo" />
+            </div>
+            <div class="footer-info">
+                <h2>Trademark Saviour</h2>
+                <p>Trademark Saviour offers a variety of services to help you choose a strong trademark, search for existing trademarks, and register your trademark with the USPTO. Contact us today for a free consultation.</p>
+            </div>
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <br>
+                    <li><a href="About-us.html">About Us</a></li>
+                    <br>
+                    <li><a href="order.html">Order</a></li>
+                    <br>
+                    <li><a href="pricing.html">Pricing</a></li>
+                 
+                    <br>
+                    <li><a href="sample.html">sample</a></li>
+                       <br>
+                    <li><a href="services.html">services</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Quick Info</h3>
+                <p>INCRIBE@gmail.com</p>
+                <p>number</p>
+                <p>facebook</p>
+                <p>insta</p>
+            </div>
         </div>
+    </footer>
 
-        <!-- Contact Information Section -->
-        <div class="footer-contact-info">
-            <h3>Contact Information</h3>
-            <p>Email: <a href="mailto:inscribe@gmail.com" style="color: #ffffff; text-decoration: none;">inscribe@gmail.com</a></p>
-            <p>Phone: <a href="tel:+442032893891" style="color: #ffffff; text-decoration: none;">+44 203 289 3891</a></p>
-            <p>Facebook: <a href="https://www.facebook.com" target="_blank" style="color: #ffffff; text-decoration: none;">facebook.com/inscribeco</a></p>
-            <p>Instagram: <a href="https://www.instagram.com" target="_blank" style="color: #ffffff; text-decoration: none;">instagram.com/inscribeco</a></p>
-        </div>
-    </div>
-
-    <!-- Footer Bottom Section -->
-    <div style="text-align: center; margin-top: 2rem; border-top: 1px solid #ffffff; padding-top: 1rem;">
-        <p>&copy; 2011 The Inscribeco. All rights reserved.</p>
-    </div>
-</footer>
 
 
 
