--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
                 <img src="images/logo (2).png" alt=" Logo" />
             </div>
             <div class="footer-info">
-                <h2>Trademark Saviour</h2>
+                <h2>Inscribe.co</h2>
                 <p>Trademark Saviour offers a variety of services to help you choose a strong trademark, search for existing trademarks, and register your trademark with the USPTO. Contact us today for a free consultation.</p>
             </div>
             <div class="footer-links">
