--- a/index.html
+++ b/index.html
@@ -982,7 +982,9 @@
                         <h3>Writing</h3>
                         <ul>
                             <li><strong>Normal Prices (5+ Days):</strong> 1000 words - USD $65, AED 240, GBP 49</li>
+                            <br>
                             <li><strong>Urgent (2-4 Days):</strong> 1000 words - USD $90, AED 330, GBP 68</li>
+                            <br>
                             <li><strong>Super Urgent (Less than 48 Hours):</strong> 1000 words - USD $103, AED 380, GBP 78</li>
                         </ul>
                     </div>
@@ -990,14 +992,21 @@
                         <h3>Proofreading</h3>
                         <ul>
                             <li><strong>Normal:</strong> £20 per 1000 words, AED 94 per 1000 words, $25 per 1000 words</li>
+                            <br>
                             <li><strong>Urgent:</strong> £30 per 1000 words, AED 117 per 1000 words, $32 per 1000 words</li>
+                            <br>
+                             <li><strong>Super Urgent:</strong> £40 per 1000 words, AED 191 per 1000 words, $52 per 1000 words</li>
                         </ul>
                     </div>
                     <div class="pricing-box">
                         <h3>PowerPoint</h3>
                         <ul>
                             <li><strong>Normal:</strong> £6 per slide, AED 35 per slide, $9 per slide</li>
+                            <br>
                             <li><strong>Urgent:</strong> £10 per slide, AED 55 per slide, $15 per slide</li>
+                            <br>
+                             <li><strong>Urgent:</strong> £15 per slide, AED 71 per slide, $19 per slide</li>
+                            
                         </ul>
                     </div>
                 </div>
