--- a/index.html
+++ b/index.html
@@ -624,6 +624,7 @@
         .pricing-box h3 {
             font-size: 1.25rem;
             color: #333;
+             margin-top: 10px
             margin-bottom: 0;
             flex: 0 0 150px;
             text-align: left;
@@ -789,12 +790,12 @@
     }
 
     .pricing-boxes {
-        width: 100%; /* Full width for boxes */
+        width: 98%; /* Full width for boxes */
         flex-direction: column; /* Stack boxes vertically */
     }
 
     .pricing-box {
-        width: 100%; /* Full width for each box */
+        width: 98%; /* Full width for each box */
         padding: 15px; /* Adjust padding */
         margin-bottom: 10px; /* Add space between boxes */
     }
