--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The InscribeCo</title>
+    <title>The InscribeCo - home </title>
     <style>
         /* General Styles */
         body {
@@ -1132,7 +1132,7 @@
             </div>
             <div class="footer-info">
                 <h2>Inscribe.co</h2>
-                <p>Trademark Saviour offers a variety of services to help you choose a strong trademark, search for existing trademarks, and register your trademark with the USPTO. Contact us today for a free consultation.</p>
+                <p>Inscribe.co offers a range of professional writing services designed to help you excel in your academic and professional endeavors. Whether you need assistance with essays, dissertations, or business writing, our expert team is here to support you. We also provide proofreading, editing, and formatting services to ensure your documents are polished and effective. Contact us today for a free consultation and discover how we can help you achieve your writing goals.</p>
             </div>
             <div class="footer-links">
                 <h3>Quick Links</h3>
@@ -1154,9 +1154,9 @@
             <div class="footer-contact">
                 <h3>Quick Info</h3>
                 <p>INCRIBE@gmail.com</p>
-                <p>number</p>
-                <p>facebook</p>
-                <p>insta</p>
+                <p>+44 2032893891</p>
+                <p>facebook.com</p>
+                <p>insta.com</p>
             </div>
         </div>
     </footer>
