--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
     }
 
     .pricing-left h2 {
-        color: #333; /* Ensure text is visible */
+        color: white; /* Ensure text is visible */
         font-size: 24px; /* Adjust font size */
     }
 
@@ -790,12 +790,12 @@
     }
 
     .pricing-boxes {
-        width: 98%; /* Full width for boxes */
+        width: 95%; /* Full width for boxes */
         flex-direction: column; /* Stack boxes vertically */
     }
 
     .pricing-box {
-        width: 98%; /* Full width for each box */
+        width: 95%; /* Full width for each box */
         padding: 15px; /* Adjust padding */
         margin-bottom: 10px; /* Add space between boxes */
     }
