--- a/index.html
+++ b/index.html
@@ -766,6 +766,15 @@
         /* Responsive Media Queries */
         @media (max-width: 768px) {
 
+              body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            background-color: #f5f5f5;
+            overflow-x: hidden;
+        }
+
             /* Adjust the overall container */
              .pricing-content {
         flex-direction: column; /* Stack elements vertically on mobile */
@@ -785,7 +794,7 @@
     }
 
     .pricing-left p {
-        color: #666; /* Lighten text for better readability */
+        color: white; /* Lighten text for better readability */
         font-size: 16px; /* Adjust font size */
     }
 
